--- a/core/templates/core/Dashboard.html
+++ b/core/templates/core/Dashboard.html
@@ -189,156 +189,199 @@
 
           <!-- MESSAGES ICI -->
           <div id="messages" class="section">
-              <div class="message-container">
-                      <!-- Admin/TechTeam View -->
-                      {% if user.is_techteam %}
-                      <div class="chat-list">
-                        <div class="chat-list-header">
-                          <input type="text" placeholder="Search Messenger">
+            <div class="message-container">
+                <!-- Admin/TechTeam View -->
+                {% if user.is_techteam %}
+                <div class="chat-list">
+                    <div class="chat-list-header">
+                        <input type="text" placeholder="Search Messenger">
+                    </div>
+                    
+                    <!-- Loop through chat threads -->
+                    {% for chat_thread in chat_threads %}
+                    <div class="chat-item" data-thread-id="{{ chat_thread.thread.id }}" onclick="showMessages('{{ chat_thread.thread.id }}')">
+                        <div class="chat-avatar">{{ chat_thread.thread.student.username|slice:":1"|upper }}</div>
+                        <div class="chat-details">
+                            <div class="chat-name">{{ chat_thread.thread.student.username }}</div>
+                            <div class="chat-message">{{ chat_thread.last_message.content }}</div>
                         </div>
-                        
-                    
-                        <!-- Loop through chat threads -->
-                        {% for chat_thread in chat_threads %}
-                        <div class="chat-item" data-thread-id="{{ chat_thread.thread.id }}" onclick="showMessages('{{ chat_thread.thread.id }}')">
-                          <div class="chat-avatar">{{ chat_thread.thread.student.username|slice:":1"|upper }}</div>
-                          <div class="chat-details">
-                              <div class="chat-name">{{ chat_thread.thread.student.username }}</div>
-                              <div class="chat-message">{{ chat_thread.last_message.content }}</div>
-                          </div>
-                          <div class="chat-time">{{ chat_thread.last_message.timestamp|date:"H:i" }}</div>
-                          {% if not chat_thread.last_message.is_read %}
-                          <div class="chat-unread"></div>
-                          {% endif %}
-                      </div>
-                      {% endfor %}
-                                  </div>
-                      {% endif %}
-                    
-                      <!-- Chat Message Section -->
-                      <div class="container">
-                        <!-- Chat Header -->
-                        <div class="msg-header">
-                          <div class="container1">
+                        <div class="chat-time">{{ chat_thread.last_message.timestamp|date:"H:i" }}</div>
+                        {% if not chat_thread.last_message.is_read %}
+                        <div class="chat-unread"></div>
+                        {% endif %}
+                    </div>
+                    {% endfor %}
+                </div>
+                {% endif %}
+                
+                <!-- Chat Message Section -->
+                <div class="container">
+                    <!-- Chat Header -->
+                    <div class="msg-header">
+                        <div class="container1">
                             <img src="{% static 'imgs/customer02.jpg' %}" class="msgimg" />
                             <div class="active">
-                              <br />
-                              <p>
-                                {% if user.is_techteam %}
-                                  {{ chat_thread.thread.student.username }}
-                                {% else %}
-                                  Help Team
-                                {% endif %}
-                              </p>
+                                <br />
+                                <p>
+                                    {% if user.is_techteam %}
+                                        {{ chat_thread.thread.student.username }}
+                                    {% else %}
+                                        Help Team
+                                    {% endif %}
+                                </p>
                             </div>
-                          </div>
                         </div>
+                    </div>
                     
-                        <!-- Chat Inbox -->
-                        <div class="chat-page">
-                          <div class="msg-inbox">
+                    <!-- Chat Inbox -->
+                    <div class="chat-page">
+                        <div class="msg-inbox">
                             <div class="chats">
-                              <!-- Message Container -->
-                              <div class="msg-page" id="messages-thread-{{ chat_thread.thread.id }}" style="display: none;">
-                                <!-- Loop through all messages for the thread -->
-                                {% for message in all_messages %}
-                                {% if message.thread == chat_thread.thread %}
-                                {% if message.sender == user %}
-                                <!-- Outgoing Message -->
-                                <div class="outgoing-chats">
-                                    <div class="outgoing-chats-img">
-                                        <img src="{% static 'imgs/customer01.jpg' %}" />
-                                    </div>
-                                    <div class="outgoing-msg">
-                                        <div class="outgoing-chats-msg">
-                                            <p>{{ message.content }}</p>
-                                            <span class="time">{{ message.timestamp|date:"H:i A" }}</span>
+                                <!-- Message Container -->
+                                {% if user.is_techteam %}
+                                    {% for chat_thread in chat_threads %}
+                                    <div class="msg-page" id="messages-thread-{{ chat_thread.thread.id }}" style="display: none;">
+                                        <!-- Loop through all messages for the thread -->
+                                        {% for message in all_messages %}
+                                        {% if message.thread == chat_thread.thread %}
+                                        {% if message.sender == user %}
+                                        <!-- Outgoing Message -->
+                                        <div class="outgoing-chats">
+                                            <div class="outgoing-chats-img">
+                                                <img src="{% static 'imgs/customer01.jpg' %}" />
+                                            </div>
+                                            <div class="outgoing-msg">
+                                                <div class="outgoing-chats-msg">
+                                                    <p>{{ message.content }}</p>
+                                                    <span class="time">{{ message.timestamp|date:"H:i A" }}</span>
+                                                </div>
+                                            </div>
                                         </div>
+                                        {% else %}
+                                        <!-- Incoming Message -->
+                                        <div class="received-chats">
+                                            <div class="received-chats-img">
+                                                <img src="{% static 'imgs/customer02.jpg' %}" />
+                                            </div>
+                                            <div class="received-msg">
+                                                <div class="received-msg-inbox">
+                                                    <p>{{ message.content }}</p>
+                                                    <span class="time">{{ message.timestamp|date:"H:i A" }}</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        {% endif %}
+                                        {% endif %}
+                                        {% endfor %}
                                     </div>
-                                </div>
+                                    {% endfor %}
                                 {% else %}
-                                <!-- Incoming Message -->
-                                <div class="received-chats">
-                                    <div class="received-chats-img">
-                                        <img src="{% static 'imgs/customer02.jpg' %}" />
-                                    </div>
-                                    <div class="received-msg">
-                                        <div class="received-msg-inbox">
-                                            <p>{{ message.content }}</p>
-                                            <span class="time">{{ message.timestamp|date:"H:i A" }}</span>
+                                    <div class="msg-page" id="messages-thread-{{ chat_thread.id }}">
+                                        <!-- Loop through all messages for the thread -->
+                                        {% for message in all_messages %}
+                                        {% if message.thread == chat_threads %}
+                                        {% if message.sender == user %}
+                                        <!-- Outgoing Message -->
+                                        <div class="outgoing-chats">
+                                            <div class="outgoing-chats-img">
+                                                <img src="{% static 'imgs/customer01.jpg' %}" />
+                                            </div>
+                                            <div class="outgoing-msg">
+                                                <div class="outgoing-chats-msg">
+                                                    <p>{{ message.content }}</p>
+                                                    <span class="time">{{ message.timestamp|date:"H:i A" }}</span>
+                                                </div>
+                                            </div>
                                         </div>
+                                        {% else %}
+                                        <!-- Incoming Message -->
+                                        <div class="received-chats">
+                                            <div class="received-chats-img">
+                                                <img src="{% static 'imgs/customer02.jpg' %}" />
+                                            </div>
+                                            <div class="received-msg">
+                                                <div class="received-msg-inbox">
+                                                    <p>{{ message.content }}</p>
+                                                    <span class="time">{{ message.timestamp|date:"H:i A" }}</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        {% endif %}
+                                        {% endif %}
+                                        {% endfor %}
                                     </div>
-                                </div>
                                 {% endif %}
-                                {% endif %}
-                                {% endfor %}
                             </div>
-                            <script>
-                              function showMessages(threadId) {
-                            // Remove active class from all threads
-                            const threads = document.querySelectorAll('.chat-item');
-                            threads.forEach(thread => {
-                                thread.classList.remove('active-thread');
-                            });
-          
-                            // Add active class to the clicked thread
-                            const activeThread = document.querySelector(`[data-thread-id="${threadId}"]`);
-                            if (activeThread) {
-                                activeThread.classList.add('active-thread');
-                            }
-          
-                            // Hide all message containers
-                            const messageContainers = document.querySelectorAll('.msg-page');
-                            messageContainers.forEach(container => {
-                                container.style.display = 'none';
-                            });
-          
-                            // Show the selected thread's messages
-                            const selectedMessages = document.getElementById(`messages-thread-${threadId}`);
-                            if (selectedMessages) {
-                                selectedMessages.style.display = 'block';
-                            }
-                        }
-                              </script>
-                            </div>
-                    
-                            <!-- Message Input Section -->
-                            <div class="msg-bottom">
-                              <form method="POST" enctype="multipart/form-data">
-                                {% csrf_token %}
-                                <div class="input-group">
-                                  <input
+                        </div>
+                        
+                        <!-- Message Input Section -->
+                        <div class="msg-bottom">
+                          <form method="POST" action="{% url 'core:add_message' %}">
+                            {% csrf_token %}
+                            {% if user.is_techteam %}
+                                <input type="hidden" name="thread_id" id="thread-id-input" value="">
+                            {% endif %}
+                            <div class="input-group">
+                                <input
                                     type="text"
                                     class="form-control"
                                     id="message-input"
                                     name="message"
                                     placeholder="... اكتب هنا"
                                     required
-                                  />
-                    
-                                  <label for="image-upload" class="input-group-text">
-                                    <i class="bi bi-image"></i>
-                                  </label>
-                                  <input
-                                    type="file"
-                                    id="image-upload"
-                                    name="attachment"
-                                    style="display: none"
-                                    accept="image/*"
-                                  />
-                    
-                                  <button type="submit" class="input-group-text send-icon" id="send-button">
+                                />
+                                
+                                <button type="submit" class="input-group-text send-icon" id="send-button">
                                     <i class="bi bi-send"></i>
-                                  </button>
-                                </div>
-                              </form>
+                                </button>
                             </div>
-                          </div>
+                        </form>
                         </div>
-                      </div>
-                      </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        
+        <script>let thread_id = null;
 
+          function showMessages(threadId) {
+              // Update the global thread_id variable
+              thread_id = threadId;
+          
+              // Update the hidden input field in the form
+              const threadIdInput = document.getElementById('thread-id-input');
+              if (threadIdInput) {
+                  threadIdInput.value = threadId;  // Set the value of the hidden input field
+              }
+          
+              // Remove active class from all threads
+              const threads = document.querySelectorAll('.chat-item');
+              threads.forEach(thread => {
+                  thread.classList.remove('active-thread');
+              });
+          
+              // Add active class to the clicked thread
+              const activeThread = document.querySelector(`[data-thread-id="${threadId}"]`);
+              if (activeThread) {
+                  activeThread.classList.add('active-thread');
+              }
+          
+              // Hide all message containers
+              const messageContainers = document.querySelectorAll('.msg-page');
+              messageContainers.forEach(container => {
+                  container.style.display = 'none';
+              });
+          
+              // Show the selected thread's messages
+              const selectedMessages = document.getElementById(`messages-thread-${threadId}`);
+              if (selectedMessages) {
+                  selectedMessages.style.display = 'block';
+              }
+          
+              // Log the current thread_id (for debugging)
+              console.log("Current thread_id:", thread_id);
+          }
+        </script>
           <!-- Settings -->
 
           <div id="settings" class="section">
